# CPP-ENGINE-LAB

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/kernel/: CMakeLists.txt
engine/kernel/private/: module_registry.cpp  module_registry.h  module_registry_error.h
engine/kernel/public/: aliases.h  kernel.h  module_dependency.h  module_descriptor.h  module_version.h
engine/math/: vec3.hpp
engine/platform/win32/: window.cpp  window.hpp  window_class.cpp  window_class.hpp  windows_incl.hpp
engine/runtime/: application.cpp  application.hpp  clock.cpp  clock.hpp  frame_time.hpp
sandbox/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/math/: vec3_smoke_tests.cpp
